Tried to address some overflow issues with infowindows.

--- a/public/stylesheets/observations.css
+++ b/public/stylesheets/observations.css
@@ -237,7 +237,6 @@
 
 .observations.mini.compact .actions,
 .observations.mini.infowindow .actions { margin-top: 5px;}
-.observations.compact.infowindow .observation { width: 240px; }
 
 /* Infowindow */
 .observations.infowindow {
