--- a/public/stylesheets/taxa/map.css
+++ b/public/stylesheets/taxa/map.css
@@ -126,3 +126,4 @@ li.place_type { padding-left: 40px; }
 #togglecollapse { position: absolute; top: 0; right: 0; border-left: 1px solid #eee; border-bottom: 1px solid #eee;}
 #legend table { margin-top: 10px; }
 #legend td { vertical-align: top; border: 0 transparent;}
+.observations.compact.infowindow .observation { width: 240px; }
